--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ body {
 hr {
   box-sizing: content-box;
   height: 0;
-  overflow: visible; }
+  overflow: auto; }
 
 h1, h2, h3, h4, h5, h6 {
   margin-top: 0;
@@ -218,7 +218,7 @@ textarea {
 
 button,
 input {
-  overflow: visible; }
+  overflow: auto; }
 
 button,
 select {
