--- a/style.css
+++ b/style.css
@@ -74,7 +74,8 @@ body {
 hr {
   box-sizing: content-box;
   height: 0;
-  overflow: auto; }
+  font-size: 0.8em;
+  overflow: hidden; }
 
 h1, h2, h3, h4, h5, h6 {
   margin-top: 0;
@@ -218,7 +219,8 @@ textarea {
 
 button,
 input {
-  overflow: auto; }
+  font-size: 0.8em;
+  overflow: hidden; }
 
 button,
 select {
