--- a/style.css
+++ b/style.css
@@ -74,8 +74,7 @@ body {
 hr {
   box-sizing: content-box;
   height: 0;
-  font-size: 0.8em;
-  overflow: hidden; }
+  overflow: auto; }
 
 h1, h2, h3, h4, h5, h6 {
   margin-top: 0;
@@ -219,8 +218,7 @@ textarea {
 
 button,
 input {
-  font-size: 0.8em;
-  overflow: hidden; }
+  overflow: auto; }
 
 button,
 select {
